cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        main.cpp
        main.cpp
        main.cpp
        main.cpp
        CodeForces_ProblemSet/Problem703A.h
        CodeForces_ProblemSet/Problem545D.h
        CodeForces_ProblemSet/Problem508B_wrong_interpretation.h
        CodeForces_ProblemSet/Problem1157B.h
        LeetCode_ProblemSet/Problem455.h
        LeetCode_ProblemSet/Problem744.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem1019.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem496.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem503.h
        CodeForces_ProblemSet/Problem466A.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem739.h
        LeetCode_ProblemSet/LinkedList/Problem2.h
        LeetCode_ProblemSet/Problem7.h
        LeetCode_ProblemSet/LinkedList/Problem1019.h
        LeetCode_ProblemSet/LinkedList/Problem1019.h
        LeetCode_ProblemSet/Top_Interview_150/Problem383.h
        LeetCode_ProblemSet/Top_Interview_150/Problem205.h
        LeetCode_ProblemSet/Top_Interview_150/Problem290.h
        LeetCode_ProblemSet/Top_Interview_150/Problem219.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem901.h
        LeetCode_ProblemSet/Binary_Search/Problem374.h
        LeetCode_ProblemSet/Binary_Search/Problem2300.h
        LeetCode_ProblemSet/Binary_Search/Problem162.h
        CodeForces_ProblemSet/Problem893C.h
        LeetCode_ProblemSet/Problem443.h
        LeetCode_ProblemSet/Array/Problem1768.h
        AtCoder/Beginner_Contest_349/A.cpp
        CodeForces_ProblemSet/Problem1373C.h
        LeetCode_ProblemSet/Problem8.h
        AtCoder/Beginner_Contest_349/B.cpp
        AtCoder/Beginner_Contest_349/B.cpp
        AtCoder/Beginner_Contest_349/C.cpp
        AtCoder/Beginner_Contest_349/C.cpp
        LeetCode_ProblemSet/Problem14.h
        CodeForces_ProblemSet/Problem352B.h
        LeetCode_ProblemSet/Tree/Problem404.h
        LeetCode_ProblemSet/Problem20.h
        LeetCode_ProblemSet/Tree/Problem129.h
        AtCoder/Beginner_Contest_348/A.h
        AtCoder/Beginner_Contest_348/B.h
        AtCoder/Beginner_Contest_348/C.h
        CodeForces_ProblemSet/Problem1303B.h
        LeetCode_ProblemSet/Problem867.h
        LeetCode_ProblemSet/Tree/Problem623.h
        LeetCode_ProblemSet/LinkedList/Problem141.h
        LeetCode_ProblemSet/Problem463.h
        LeetCode_ProblemSet/Stack/Problem94.h
        CodeForces_ProblemSet/Problem1141D.h
        CodeForces_ProblemSet/Problem492C.h
        CodeForces_ProblemSet/Problem1932D.h
        CodeForces_ProblemSet/Problem1951C.h
        LeetCode_ProblemSet/Tree/Problem988.h
        LeetCode_ProblemSet/Problem561.h
        CodeForces_ProblemSet/Problem1203E.h
        CodeForces_ProblemSet/Problem845C.h
        LeetCode_ProblemSet/Problem860.h
)
