cmake_minimum_required(VERSION 3.28)--
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        main.cpp
        main.cpp
        main.cpp
        main.cpp
        CodeForces_ProblemSet/Problem703A.h
        CodeForces_ProblemSet/Problem545D.h
        CodeForces_ProblemSet/Problem508B_wrong_interpretation.h
        CodeForces_ProblemSet/Problem1157B.h
        LeetCode_ProblemSet/Problem455.h
        LeetCode_ProblemSet/Problem744.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem1019.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem496.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem503.h
        CodeForces_ProblemSet/Problem466A.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem739.h
        LeetCode_ProblemSet/LinkedList/Problem2.h
        LeetCode_ProblemSet/Problem7.h
        LeetCode_ProblemSet/LinkedList/Problem1019.h
        LeetCode_ProblemSet/LinkedList/Problem1019.h
        LeetCode_ProblemSet/Top_Interview_150/Problem383.h
        LeetCode_ProblemSet/Top_Interview_150/Problem205.h
        LeetCode_ProblemSet/Top_Interview_150/Problem290.h
        LeetCode_ProblemSet/Top_Interview_150/Problem219.h
        LeetCode_ProblemSet/Monotonic_Stack/Problem901.h
        LeetCode_ProblemSet/Binary_Search/Problem374.h
        LeetCode_ProblemSet/Binary_Search/Problem2300.h
        LeetCode_ProblemSet/Binary_Search/Problem162.h
        CodeForces_ProblemSet/Problem893C.h
        LeetCode_ProblemSet/Problem443.h
        LeetCode_ProblemSet/Array/Problem1768.h
        AtCoder/Beginner_Contest_349/A.cpp
        CodeForces_ProblemSet/Problem1373C.h
        LeetCode_ProblemSet/Problem8.h
        AtCoder/Beginner_Contest_349/B.cpp
        AtCoder/Beginner_Contest_349/B.cpp
        AtCoder/Beginner_Contest_349/C.cpp
        AtCoder/Beginner_Contest_349/C.cpp
        LeetCode_ProblemSet/Problem14.h
        CodeForces_ProblemSet/Problem352B.h
        LeetCode_ProblemSet/Tree/Problem404.h
        LeetCode_ProblemSet/Problem20.h
        LeetCode_ProblemSet/Tree/Problem129.h
        AtCoder/Beginner_Contest_348/A.h
        AtCoder/Beginner_Contest_348/B.h
        AtCoder/Beginner_Contest_348/C.h
        CodeForces_ProblemSet/Problem1303B.h
        LeetCode_ProblemSet/Problem867.h
        LeetCode_ProblemSet/Tree/Problem623.h
        LeetCode_ProblemSet/LinkedList/Problem141.h
        LeetCode_ProblemSet/Problem463.h
        LeetCode_ProblemSet/Stack/Problem94.h
        CodeForces_ProblemSet/Problem1141D.h
        CodeForces_ProblemSet/Problem492C.h
        CodeForces_ProblemSet/Problem1932D.h
        CodeForces_ProblemSet/Problem1951C.h
        LeetCode_ProblemSet/Tree/Problem988.h
        LeetCode_ProblemSet/Problem561.h
        CodeForces_ProblemSet/Problem1203E.h
        CodeForces_ProblemSet/Problem845C.h
        LeetCode_ProblemSet/Problem860.h
        LeetCode_ProblemSet/Problem611.h
        LeetCode_ProblemSet/Problem26.h
        LeetCode_ProblemSet/Problem36.h
        LeetCode_ProblemSet/Problem73.h
        LeetCode_ProblemSet/Problem200.h
        CodeForces_ProblemSet/Problem1950B.h
        CodeForces_ProblemSet/Problem1183D.h
        LeetCode_ProblemSet/Problem1992.h
        LeetCode_ProblemSet/Problem6.h
        CodeForces_ProblemSet/Problem3A.h
        LeetCode_ProblemSet/Problem1971.h
        CodeForces_ProblemSet/Problem35C.h
        LeetCode_ProblemSet/Problem752.h
        LeetCode_ProblemSet/Problem23.h
        LeetCode_ProblemSet/Problem310.h
        LeetCode_ProblemSet/Problem11.h
        LeetCode_ProblemSet/Problem25.h
        LeetCode_ProblemSet/Problem1232.h
        LeetCode_ProblemSet/Problem237.h
        LeetCode_ProblemSet/Problem206.h
        LeetCode_ProblemSet/Problem234.h
        LeetCode_ProblemSet/Problem817.h
        LeetCode_ProblemSet/Problem92.h
        LeetCode_ProblemSet/Problem19.h
        LeetCode_ProblemSet/Problem21.h
        LeetCode_ProblemSet/LinkedList/Problem23.h
        LeetCode_ProblemSet/LinkedList/Problem19.h
        LeetCode_ProblemSet/LinkedList/Problem21.h
        LeetCode_ProblemSet/LinkedList/Problem25.h
        LeetCode_ProblemSet/LinkedList/Problem817.h
        LeetCode_ProblemSet/LinkedList/Problem92.h
        LeetCode_ProblemSet/LinkedList/Problem206.h
        LeetCode_ProblemSet/LinkedList/Problem234.h
        LeetCode_ProblemSet/LinkedList/Problem237.h
        LeetCode_ProblemSet/LinkedList/Problem24.h
        LeetCode_ProblemSet/Problem1137.h
        CodeForces_ProblemSet/Problem492B.h
        LeetCode_ProblemSet/LinkedList/Problem142.h
        LeetCode_ProblemSet/LinkedList/Problem203.h
        LeetCode_ProblemSet/Problem232.h
        LeetCode_ProblemSet/Problem149.h
        LeetCode_ProblemSet/Problem2370.h
        CodeForces_ProblemSet/Problem514B.h
        LeetCode_ProblemSet/Problem1289.h
        CodeForces_ProblemSet/Problem25A.h
        LeetCode_ProblemSet/Problem514.h
        CodeForces_ProblemSet/Problem1285B.h
        LeetCode_ProblemSet/Problem328.h
        LeetCode_ProblemSet/Problem382.h
        LeetCode_ProblemSet/Problem725.h
        LeetCode_ProblemSet/Problem876.h
        LeetCode_ProblemSet/Problem2487.h
        LeetCode_ProblemSet/Problem114.h
        LeetCode_ProblemSet/Problem1721.h
        LeetCode_ProblemSet/Problem2130.h
        LeetCode_ProblemSet/Problem2816.h
        LeetCode_ProblemSet/Problem2807.h
        LeetCode_ProblemSet/Problem2095.h
        LeetCode_ProblemSet/Problem1290.h
        LeetCode_ProblemSet/Problem61.h
        LeetCode_ProblemSet/Problem86.h
        LeetCode_ProblemSet/Problem834.h
        LeetCode_ProblemSet/Problem2092.h
        LeetCode_ProblemSet/Problem2997.h
        LeetCode_ProblemSet/Problem445.h
        LeetCode_ProblemSet/Problem67.h
        LeetCode_ProblemSet/Problem1915.h
        LeetCode_ProblemSet/Problem2000.h
        LeetCode_ProblemSet/Problem1172.h
        LeetCode_ProblemSet/Problem2441.h
        LeetCode_ProblemSet/Problem127.h
        LeetCode_ProblemSet/Problem685.h
        LeetCode_ProblemSet/Problem165.h
        LeetCode_ProblemSet/Problem9.h
        LeetCode_ProblemSet/Problem881.h
        LeetCode_ProblemSet/Problem71.h
        LeetCode_ProblemSet/Problem143.h
        LeetCode_ProblemSet/Problem787.h
        LeetCode_ProblemSet/Problem682.h
        LeetCode_ProblemSet/Problem506.h
        LeetCode_ProblemSet/Problem3075.h
        LeetCode_ProblemSet/Problem786.h
        LeetCode_ProblemSet/Problem857.h
        LeetCode_ProblemSet/Problem2373.h
        LeetCode_ProblemSet/Problem861.h
        LeetCode_ProblemSet/Problem1219.h
        LeetCode_ProblemSet/Problem2812.h
        LeetCode_ProblemSet/Problem2331.h
        LeetCode_ProblemSet/Problem1325.h
        LeetCode_ProblemSet/Problem979.h
        LeetCode_ProblemSet/Problem3068.h
        LeetCode_ProblemSet/Problem1863.h
        LeetCode_ProblemSet/Problem78.h
        LeetCode_ProblemSet/Problem131.h
        LeetCode_ProblemSet/Problem2597.h
        LeetCode_ProblemSet/Problem1255.h
        LeetCode_ProblemSet/Problem140.h
        LeetCode_ProblemSet/Problem43.h
        LeetCode_ProblemSet/Problem552.h
        LeetCode_ProblemSet/Problem1608.h
        LeetCode_ProblemSet/Problem1208.h
        LeetCode_ProblemSet/Problem1404.h
        LeetCode_ProblemSet/Problem1442.h
        LeetCode_ProblemSet/Problem260.h
        LeetCode_ProblemSet/Problem3110.h
        LeetCode_ProblemSet/Problem344.h
        LeetCode_ProblemSet/Problem2486.h
        LeetCode_ProblemSet/Problem409.h
        LeetCode_ProblemSet/Problem523.h
        LeetCode_ProblemSet/Problem974.h
        LeetCode_ProblemSet/Problem502.h
        LeetCode_ProblemSet/Problem633.h
        LeetCode_ProblemSet/Problem826.h
        CodeForces_ProblemSet/971-4/A.cpp
        CodeForces_ProblemSet/971-4/B.cpp
        CodeForces_ProblemSet/971-4/C.cpp
        LeetCode_ProblemSet/Problem1331.cpp
        LeetCode_ProblemSet/Problem1046.cpp
        LeetCode_ProblemSet/Problem1054.cpp
        LeetCode_ProblemSet/Problem703.cpp
        LeetCode_ProblemSet/Problem621.cpp
        LeetCode_ProblemSet/Problem295.cpp
        LeetCode_ProblemSet/Problem1590.cpp
        LeetCode_ProblemSet/Problem2491.cpp
        LeetCode_ProblemSet/Problem215.cpp
        LeetCode_ProblemSet/Problem658.cpp
        LeetCode_ProblemSet/Problem692.cpp
        LeetCode_ProblemSet/Problem1337.cpp
        LeetCode_ProblemSet/Problem1464.cpp
        LeetCode_ProblemSet/Problem1985.cpp
        LeetCode_ProblemSet/Problem567.cpp
        LeetCode_ProblemSet/Problem1094.cpp
        LeetCode_ProblemSet/Problem973.cpp
        LeetCode_ProblemSet/Problem1813.cpp
        LeetCode_ProblemSet/Problem2696.cpp
        LeetCode_ProblemSet/Problem2146.cpp
        LeetCode_ProblemSet/Problem2512.cpp
        LeetCode_ProblemSet/Problem2500.cpp
        LeetCode_ProblemSet/Problem2558.cpp
        LeetCode_ProblemSet/Problem2974.cpp
        LeetCode_ProblemSet/Problem1963.cpp
        LeetCode_ProblemSet/Problem921.cpp
        LeetCode_ProblemSet/Problem962.cpp
        LeetCode_ProblemSet/Problem1942.cpp
        LeetCode_ProblemSet/Problem2406.cpp
        LeetCode_ProblemSet/Problem632.cpp
        LeetCode_ProblemSet/Problem2530.cpp
        LeetCode_ProblemSet/Problem2938.cpp
        LeetCode_ProblemSet/Problem1405.cpp
        LeetCode_ProblemSet/Problem670.cpp
        LeetCode_ProblemSet/Problem2044.cpp
        LeetCode_ProblemSet/Problem1545.cpp
        LeetCode_ProblemSet/Problem993.cpp
        LeetCode_ProblemSet/Problem951.cpp
        LeetCode_ProblemSet/Problem1957.cpp
        LeetCode_ProblemSet/Problem3163.cpp
        LeetCode_ProblemSet/Problem2914.cpp
        LeetCode_ProblemSet/Problem2275.cpp
        LeetCode_ProblemSet/Problem1829.cpp
        LeetCode_ProblemSet/Problem3133.cpp
        LeetCode_ProblemSet/Problem2182.cpp
        LeetCode_ProblemSet/Problem1475.cpp
        LeetCode_ProblemSet/Problem515.cpp
        LeetCode_ProblemSet/Problem88.cpp
        LeetCode_ProblemSet/Problem329.cpp
        LeetCode_ProblemSet/Problem1422.cpp
        LeetCode_ProblemSet/Problem2559.cpp
        LeetCode_ProblemSet/Problem2270.cpp
        LeetCode_ProblemSet/Problem1930.cpp
        LeetCode_ProblemSet/Problem2381.cpp
        LeetCode_ProblemSet/Problem1769.cpp
        LeetCode_ProblemSet/Problem1408.cpp
        LeetCode_ProblemSet/Problem208.cpp
        LeetCode_ProblemSet/Problem3042.cpp
        LeetCode_ProblemSet/Problem211.cpp
        LeetCode_ProblemSet/Problem2185.cpp
        LeetCode_ProblemSet/Problem916.cpp
        LeetCode_ProblemSet/Problem1400.cpp
        LeetCode_ProblemSet/Problem2116.cpp
        LeetCode_ProblemSet/Problem3223.cpp
        LeetCode_ProblemSet/Problem2657.cpp
        LeetCode_ProblemSet/Problem2429.cpp
        LeetCode_ProblemSet/Problem2425.cpp
        LeetCode_ProblemSet/Problem2683.cpp
        LeetCode_ProblemSet/Problem1368.cpp
        LeetCode_ProblemSet/Problem42.cpp
        LeetCode_ProblemSet/Problem407.cpp
        LeetCode_ProblemSet/Problem2661.cpp
        LeetCode_ProblemSet/Problem2017.cpp
        LeetCode_ProblemSet/Problem1765.cpp
        LeetCode_ProblemSet/Problem1267.cpp
        LeetCode_ProblemSet/Problem802.cpp
        LeetCode_ProblemSet/Problem2948.cpp
        LeetCode_ProblemSet/Problem2829.cpp
        LeetCode_ProblemSet/Problem2127.cpp
        LeetCode_ProblemSet/Problem3201.cpp
        LeetCode_ProblemSet/Problem3152.cpp
        LeetCode_ProblemSet/Problem1462.cpp
        LeetCode_ProblemSet/Problem2658.cpp
        LeetCode_ProblemSet/Problem684.cpp
        LeetCode_ProblemSet/Problem2493.cpp
        LeetCode_ProblemSet/Problem827.cpp
        LeetCode_ProblemSet/Problem3151.cpp
        LeetCode_ProblemSet/Problem1752.cpp
        LeetCode_ProblemSet/Problem3105.cpp
        LeetCode_ProblemSet/Problem1800.cpp
        LeetCode_ProblemSet/Problem1790.cpp
        LeetCode_ProblemSet/Problem1726.cpp
        LeetCode_ProblemSet/Problem3160.cpp
        LeetCode_ProblemSet/Problem2364.cpp
        LeetCode_ProblemSet/Problem2349.cpp
        LeetCode_ProblemSet/Problem3174.cpp
        LeetCode_ProblemSet/Problem1910.cpp
        LeetCode_ProblemSet/Problem2342.cpp
        LeetCode_ProblemSet/Problem3066.cpp
        LeetCode_ProblemSet/Problem1352.cpp
        LeetCode_ProblemSet/Problem2698.cpp
        LeetCode_ProblemSet/Problem1718.cpp
        LeetCode_ProblemSet/Problem2375.cpp
        LeetCode_ProblemSet/Problem1079.cpp
        LeetCode_ProblemSet/Problem1415.cpp
        LeetCode_ProblemSet/Problem1980.cpp
        LeetCode_ProblemSet/Problem1261.cpp
        LeetCode_ProblemSet/Problem1028.cpp
        LeetCode_ProblemSet/Problem2467.cpp
)
